--- a/src/patternfly/components/Label/label-group-close.hbs
+++ b/src/patternfly/components/Label/label-group-close.hbs
@@ -2,5 +2,5 @@
   {{#if label-group-close--attribute}}
     {{{label-group-close--attribute}}}
   {{/if}}>
-  {{> button button--IsPlain=true button--HasNoPadding=true button--IsIcon=true button--icon="times" button--attribute=(concat 'aria-labelledby="' label-group--id '-button ' label-group--id '-label" aria-label="Close label group" id="' label-group--id '-button"')}}
+  {{> button button--IsPlain=true button--IsSmall=true button--IsIcon=true button--icon="times" button--attribute=(concat 'aria-labelledby="' label-group--id '-button ' label-group--id '-label" aria-label="Close label group" id="' label-group--id '-button"')}}
 </div>
