feat(simpleList): added high contrast border for hover/focus/current

--- a/src/patternfly/components/SimpleList/simple-list.scss
+++ b/src/patternfly/components/SimpleList/simple-list.scss
@@ -18,7 +18,11 @@
   // Simple list item link
   --#{$simple-list}__item-link--m-link--Color: var(--pf-t--global--text--color--link--default);
   --#{$simple-list}__item-link--m-link--m-current--Color: var(--pf-t--global--text--color--link--hover);
+  --#{$simple-list}__item-link--m-link--m-current--BorderWidth: var(--pf-t--global--border--width--strong);
+  --#{$simple-list}__item-link--m-link--m-current--BorderColor: var(--pf-t--global--border--color--high-contrast);
   --#{$simple-list}__item-link--m-link--hover--Color: var(--pf-t--global--text--color--link--hover);
+  --#{$simple-list}__item-link--m-link--hover--BorderWidth: var(--pf-t--global--border--width--regular);
+  --#{$simple-list}__item-link--m-link--hover--BorderColor: var(--pf-t--global--border--color--high-contrast);
 
   // Simple list title
   --#{$simple-list}__title--PaddingBlockStart: var(--pf-t--global--spacer--sm);
@@ -58,12 +62,35 @@
     --#{$simple-list}__item-link--BackgroundColor: var(--#{$simple-list}__item-link--hover--BackgroundColor);
     --#{$simple-list}__item-link--Color: var(--#{$simple-list}__item-link--hover--Color);
 
+    position:relative;
     text-decoration-line: none;
+
+    &::after {
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+      content: "";
+      background-color: inherit;
+      border: var(--#{$simple-list}__item-link--m-link--hover--BorderWidth) solid var(--#{$simple-list}__item-link--m-link--hover--BorderColor);
+      border-radius: inherit;
+    }
   }
 
   &.pf-m-current {
     --#{$simple-list}__item-link--BackgroundColor: var(--#{$simple-list}__item-link--m-current--BackgroundColor);
     --#{$simple-list}__item-link--Color: var(--#{$simple-list}__item-link--m-current--Color);
+
+    position: relative;
+    
+    &::after {
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+      content: "";
+      background-color: inherit;
+      border: var(--#{$simple-list}__item-link--m-link--m-current--BorderWidth) solid var(--#{$simple-list}__item-link--m-link--m-current--BorderColor);
+      border-radius: inherit;
+    }
   }
 }
 
