--- a/src/patternfly/components/DescriptionList/description-list.hbs
+++ b/src/patternfly/components/DescriptionList/description-list.hbs
@@ -1,6 +1,7 @@
-<dl {{#if description-list--aria-label}}
+<dl class="{{pfv}}description-list{{#if description-list--modifier}} {{description-list--modifier}}{{/if}}"
+  {{#if description-list--aria-label}}
     aria-label="{{description-list--aria-label}}"
-  {{/if}} class="{{pfv}}description-list{{#if description-list--modifier}} {{description-list--modifier}}{{/if}}"
+  {{/if}}
   {{#if description-list--attribute}}
     {{{description-list--attribute}}}
   {{/if}}>
