chore(card/tabs/dashboard): add aria-labels for description lists

--- a/src/patternfly/demos/Card/templates/card-template-details.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-details.hbs
@@ -6,7 +6,7 @@
       {{/title}}
     {{/card-title}}
     {{#> card-body}}
-      {{#> description-list}}
+      {{#> description-list description-list--aria-label="Details"}}
         {{#> description-list-group}}
           {{#> description-list-term}}
             Cluster API Address
