--- a/src/patternfly/demos/Card/templates/card-template-events.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-events.hbs
@@ -11,7 +11,7 @@
       {{/card-title}}
     {{/card-header}}
     {{#> card-body}}
-      {{#> description-list description-list--modifier="pf-m-compact"}}
+      {{#> description-list description-list--aria-label="Events" description-list--modifier="pf-m-compact"}}
         {{#> description-list-group}}
           {{#> description-list-term}}
             {{#> l-flex l-flex--modifier="pf-m-nowrap"}}
