feat(DataList,Progress,Truncate): add tabindex

--- a/src/patternfly/components/Truncate/truncate.hbs
+++ b/src/patternfly/components/Truncate/truncate.hbs
@@ -1,4 +1,5 @@
 <span class="{{pfv}}truncate{{#if truncate--IsFixed}} pf-m-fixed{{/if}}{{#if truncate--modifier}} {{truncate--modifier}}{{/if}}"
+  tabindex="0"
   {{#if truncate--attribute}}
     {{{truncate--attribute}}}
   {{/if}}>
