--- a/src/patternfly/components/SimpleList/simple-list.scss
+++ b/src/patternfly/components/SimpleList/simple-list.scss
@@ -14,7 +14,11 @@
   --#{$simple-list}__item-link--hover--Color: var(--pf-t--global--text--color--subtle);
   --#{$simple-list}__item-link--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--hover);
   --#{$simple-list}__item-link--BorderRadius: var(--pf-t--global--border--radius--tiny);
-
+  --#{$simple-list}__item-link--BorderWidth: 0;
+  --#{$simple-list}__item-link--BorderColor: var(--pf-t--global--border--color--high-contrast);
+  --#{$simple-list}__item-link--hover--BorderWidth: var(--pf-t--global--border--width--regular);
+  --#{$simple-list}__item-link--current--BorderWidth: var(--pf-t--global--border--width--strong);
+  
   // Simple list item link
   --#{$simple-list}__item-link--m-link--Color: var(--pf-t--global--text--color--link--default);
   --#{$simple-list}__item-link--m-link--m-current--Color: var(--pf-t--global--text--color--link--hover);
@@ -67,8 +71,7 @@
   &:is(:hover, :focus) {
     --#{$simple-list}__item-link--BackgroundColor: var(--#{$simple-list}__item-link--hover--BackgroundColor);
     --#{$simple-list}__item-link--Color: var(--#{$simple-list}__item-link--hover--Color);
-    --#{$simple-list}__item-link--BorderWidth: var(--pf-t--global--border--width--regular);
-    --#{$simple-list}__item-link--BorderColor: var(--pf-t--global--border--color--high-contrast);
+    --#{$simple-list}__item-link--BorderWidth: var(--#{$simple-list}__item-link--hover--BorderWidth);
 
     text-decoration-line: none;
   }
@@ -76,8 +79,7 @@
   &.pf-m-current {
     --#{$simple-list}__item-link--BackgroundColor: var(--#{$simple-list}__item-link--m-current--BackgroundColor);
     --#{$simple-list}__item-link--Color: var(--#{$simple-list}__item-link--m-current--Color);
-    --#{$simple-list}__item-link--BorderWidth: var(--pf-t--global--border--width--strong);
-    --#{$simple-list}__item-link--BorderColor: var(--pf-t--global--border--color--high-contrast);
+    --#{$simple-list}__item-link--BorderWidth: var(--#{$simple-list}__item-link--current--BorderWidth);
   }
 }
 
