--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -300,6 +300,7 @@
   &::after {
     position: absolute;
     inset: 0;
+    pointer-events: none;
     content: "";
     border: var(--#{$nav}__link--after--BorderWidth) solid var(--#{$nav}__link--after--BorderColor);
     border-radius: inherit;
