feat(nav): simplify variables

--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -57,11 +57,10 @@
   --#{$nav}__link--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--alt--hover);
   --#{$nav}__link--m-current--BackgroundColor: var(--pf-t--global--background--color--action--plain--alt--clicked);
   --#{$nav}__link--m-current--Color: var(--pf-t--global--text--color--regular);
-  --#{$nav}__link--after--BorderWidth: var(--pf-t--global--high-contrast--border--width--control--default);
-  --#{$nav}__link--after--BorderColor: transparent;
-  --#{$nav}__link--hover--after--BorderColor: var(--pf-t--global--border--color--high-contrast);
+  --#{$nav}__link--after--BorderColor: var(--pf-t--global--border--color--high-contrast);
+  --#{$nav}__link--after--BorderWidth: 0;
+  --#{$nav}__link--hover--after--BorderWidth: var(--pf-t--global--high-contrast--border--width--control--hover);
   --#{$nav}__link--m-current--after--BorderWidth: var(--pf-t--global--high-contrast--border--width--control--clicked);
-  --#{$nav}__link--m-current--after--BorderColor: var(--pf-t--global--border--color--high-contrast);
 
   // background color transition on hover
   --#{$nav}__link--TransitionDuration--background-color: var(--pf-t--global--motion--duration--fade--default);
@@ -311,7 +310,7 @@
   &:hover,
   &.pf-m-hover,
   &:focus {
-    --#{$nav}__link--after--BorderColor: var(--#{$nav}__link--hover--after--BorderColor);
+    --#{$nav}__link--after--BorderWidth: var(--#{$nav}__link--hover--after--BorderWidth);
 
     color: var(--#{$nav}__link--hover--Color);
     background-color: var(--#{$nav}__link--hover--BackgroundColor);
@@ -321,7 +320,6 @@
   &.pf-m-current:hover {
     --#{$nav}__link-icon--Color: var(--#{$nav}__link--m-current__link-icon--Color);
     --#{$nav}__link--after--BorderWidth: var(--#{$nav}__link--m-current--after--BorderWidth);
-    --#{$nav}__link--after--BorderColor: var(--#{$nav}__link--m-current--after--BorderColor);
 
     color: var(--#{$nav}__link--m-current--Color);
     background-color: var(--#{$nav}__link--m-current--BackgroundColor);
