--- a/src/patternfly/base/tokens/tokens-palette.scss
+++ b/src/patternfly/base/tokens/tokens-palette.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 29 May 2025 01:58:24 GMT
+// Generated on Tue, 05 Aug 2025 23:18:24 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--color--black: #000000;
@@ -11,7 +11,7 @@
   --pf-t--color--blue--50: #0066cc;
   --pf-t--color--blue--60: #004d99;
   --pf-t--color--blue--70: #003366;
-  --pf-t--color--blue--80: #002250;
+  --pf-t--color--blue--80: #032142;
   --pf-t--color--gray--10: #f2f2f2;
   --pf-t--color--gray--20: #e0e0e0;
   --pf-t--color--gray--30: #c7c7c7;
@@ -29,6 +29,7 @@
   --pf-t--color--green--50: #63993d;
   --pf-t--color--green--60: #3d7317;
   --pf-t--color--green--70: #204d00;
+  --pf-t--color--green--80: #183301;
   --pf-t--color--orange--10: #ffe8cc;
   --pf-t--color--orange--20: #fccb8f;
   --pf-t--color--orange--30: #f8ae54;
@@ -60,6 +61,7 @@
   --pf-t--color--red-orange--50: #f0561d;
   --pf-t--color--red-orange--60: #b1380b;
   --pf-t--color--red-orange--70: #731f00;
+  --pf-t--color--red-orange--80: #4c1405;
   --pf-t--color--teal--10: #daf2f2;
   --pf-t--color--teal--20: #b9e5e5;
   --pf-t--color--teal--30: #9ad8d8;
