--- a/src/patternfly/base/tokens/tokens-dark.scss
+++ b/src/patternfly/base/tokens/tokens-dark.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 29 May 2025 01:58:23 GMT
+// Generated on Tue, 05 Aug 2025 23:18:24 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--action--plain--default: rgba(0, 0, 0, 0.0000);
@@ -88,6 +88,7 @@
   --pf-t--global--dark--color--status--success--300: var(--pf-t--color--green--20);
   --pf-t--global--dark--color--status--warning--100: var(--pf-t--color--yellow--30);
   --pf-t--global--dark--color--status--warning--200: var(--pf-t--color--yellow--20);
+  --pf-t--global--dark--focus-ring--color--100: var(--pf-t--color--blue--30);
   --pf-t--global--dark--icon--color--100: var(--pf-t--color--gray--10);
   --pf-t--global--dark--icon--color--200: var(--pf-t--color--gray--40);
   --pf-t--global--dark--icon--color--300: var(--pf-t--color--gray--90);
@@ -199,6 +200,7 @@
   --pf-t--global--color--status--warning--clicked: var(--pf-t--global--dark--color--status--warning--200);
   --pf-t--global--color--status--warning--default: var(--pf-t--global--dark--color--status--warning--100);
   --pf-t--global--color--status--warning--hover: var(--pf-t--global--dark--color--status--warning--200);
+  --pf-t--global--focus-ring--color--default: var(--pf-t--global--dark--focus-ring--color--100);
   --pf-t--global--icon--color--brand--clicked: var(--pf-t--global--dark--color--brand--300);
   --pf-t--global--icon--color--brand--default: var(--pf-t--global--dark--color--brand--200);
   --pf-t--global--icon--color--brand--hover: var(--pf-t--global--dark--color--brand--300);
