--- a/src/patternfly/base/tokens/tokens-highcontrast-dark.scss
+++ b/src/patternfly/base/tokens/tokens-highcontrast-dark.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 29 May 2025 01:58:24 GMT
+// Generated on Tue, 05 Aug 2025 23:18:24 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--action--plain--default: rgba(0, 0, 0, 0.0000);
@@ -90,6 +90,7 @@
   --pf-t--global--dark--color--status--success--300: var(--pf-t--color--green--20);
   --pf-t--global--dark--color--status--warning--100: var(--pf-t--color--yellow--30);
   --pf-t--global--dark--color--status--warning--200: var(--pf-t--color--yellow--20);
+  --pf-t--global--dark--focus-ring--color--100: var(--pf-t--color--blue--30);
   --pf-t--global--dark--icon--color--100: var(--pf-t--color--gray--10);
   --pf-t--global--dark--icon--color--200: var(--pf-t--color--gray--40);
   --pf-t--global--dark--icon--color--300: var(--pf-t--color--gray--90);
@@ -114,15 +115,15 @@
   --pf-t--global--background--color--inverse--clicked: var(--pf-t--global--dark--background--color--450);
   --pf-t--global--background--color--inverse--default: var(--pf-t--global--dark--background--color--400);
   --pf-t--global--background--color--inverse--hover: var(--pf-t--global--dark--background--color--450);
-  --pf-t--global--background--color--primary--clicked: var(--pf-t--global--dark--background--color--100);
-  --pf-t--global--background--color--primary--hover: var(--pf-t--global--dark--background--color--100);
+  --pf-t--global--background--color--primary--clicked: var(--pf-t--global--dark--background--color--200);
+  --pf-t--global--background--color--primary--hover: var(--pf-t--global--dark--background--color--200);
   --pf-t--global--background--color--secondary--clicked: var(--pf-t--global--dark--background--color--200);
   --pf-t--global--background--color--secondary--default: var(--pf-t--global--dark--background--color--100);
   --pf-t--global--background--color--secondary--hover: var(--pf-t--global--dark--background--color--200);
   --pf-t--global--border--color--alt: var(--pf-t--global--background--color--primary--default);
   --pf-t--global--border--color--clicked: var(--pf-t--global--dark--color--brand--200);
   --pf-t--global--border--color--control--read-only: var(--pf-t--global--dark--border--color--50);
-  --pf-t--global--border--color--disabled: var(--pf-t--global--dark--color--disabled--200);
+  --pf-t--global--border--color--disabled: var(--pf-t--global--dark--color--disabled--100);
   --pf-t--global--border--color--high-contrast: var(--pf-t--global--border--color--default);
   --pf-t--global--border--color--hover: var(--pf-t--global--dark--color--brand--100);
   --pf-t--global--border--color--nonstatus--blue--clicked: var(--pf-t--global--dark--color--nonstatus--blue--200);
@@ -200,6 +201,7 @@
   --pf-t--global--color--status--warning--clicked: var(--pf-t--global--dark--color--status--warning--200);
   --pf-t--global--color--status--warning--default: var(--pf-t--global--dark--color--status--warning--100);
   --pf-t--global--color--status--warning--hover: var(--pf-t--global--dark--color--status--warning--200);
+  --pf-t--global--focus-ring--color--default: var(--pf-t--global--dark--focus-ring--color--100);
   --pf-t--global--icon--color--brand--clicked: var(--pf-t--global--dark--color--brand--300);
   --pf-t--global--icon--color--brand--default: var(--pf-t--global--dark--color--brand--200);
   --pf-t--global--icon--color--brand--hover: var(--pf-t--global--dark--color--brand--300);
