--- a/src/patternfly/base/tokens/tokens-dark.scss
+++ b/src/patternfly/base/tokens/tokens-dark.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 05 Aug 2025 23:18:24 GMT
+// Generated on Wed, 13 Aug 2025 18:00:32 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--action--plain--default: rgba(0, 0, 0, 0.0000);
@@ -28,6 +28,7 @@
   --pf-t--global--dark--background--color--highlight--200: var(--pf-t--color--yellow--30);
   --pf-t--global--dark--border--color--100: var(--pf-t--color--gray--50);
   --pf-t--global--dark--border--color--200: var(--pf-t--color--gray--40);
+  --pf-t--global--dark--border--color--300: var(--pf-t--color--gray--30);
   --pf-t--global--dark--border--color--50: var(--pf-t--color--gray--60);
   --pf-t--global--dark--color--brand--100: var(--pf-t--color--blue--30);
   --pf-t--global--dark--color--brand--200: var(--pf-t--color--blue--20);
