chore(code editor): update empty state heading level

--- a/src/patternfly/components/CodeEditor/code-editor-template-no-actions.hbs
+++ b/src/patternfly/components/CodeEditor/code-editor-template-no-actions.hbs
@@ -16,7 +16,7 @@
         {{#> empty-state-header}}
           {{> empty-state-icon empty-state-icon--type="code"}}
           {{#> empty-state-title}}
-            {{#> empty-state-title-text}}
+            {{#> empty-state-title-text empty-state-title-text--element="h4"}}
               Start editing
             {{/empty-state-title-text}}
           {{/empty-state-title}}
