chore(skeleton): add screen reader text to hbs file

--- a/src/patternfly/demos/Skeleton/card-skeleton.hbs
+++ b/src/patternfly/demos/Skeleton/card-skeleton.hbs
@@ -3,7 +3,7 @@
       {{#> l-flex l-flex--modifier="pf-m-column pf-m-spacer-md"}}
         {{#> skeleton}}
           {{#if isFirstCard}}
-            <span class="pf-v6-screen-reader">Loading card content</span>
+            {{#> screen-reader}}Loading card content{{/screen-reader}}
           {{/if}}
         {{/skeleton}}
         {{#> skeleton skeleton--modifier="pf-m-width-66"}}
