chore(skeleton): updated attribute name

--- a/src/patternfly/demos/Skeleton/card-skeleton.hbs
+++ b/src/patternfly/demos/Skeleton/card-skeleton.hbs
@@ -2,7 +2,7 @@
   {{#> card-body}}
       {{#> l-flex l-flex--modifier="pf-m-column pf-m-spacer-md"}}
         {{#> skeleton}}
-          {{#if isFirstCard}}
+          {{#if card-skeleton--IsFirstCard}}
             {{#> screen-reader}}Loading card content{{/screen-reader}}
           {{/if}}
         {{/skeleton}}
