chore(skeleton): added screen reader text (#7716)
* chore(skeleton): added screen reader text

* chore(skeleton): added the screen reader partial

* chore(skeleton): add screen reader text to hbs file

* chore(skeleton): add screen reader text to hbs file

* chore(skeleton): updated attribute name

--- a/src/patternfly/demos/Skeleton/card-skeleton.hbs
+++ b/src/patternfly/demos/Skeleton/card-skeleton.hbs
@@ -2,6 +2,9 @@
   {{#> card-body}}
       {{#> l-flex l-flex--modifier="pf-m-column pf-m-spacer-md"}}
         {{#> skeleton}}
+          {{#if card-skeleton--IsFirstCard}}
+            {{#> screen-reader}}Loading card content{{/screen-reader}}
+          {{/if}}
         {{/skeleton}}
         {{#> skeleton skeleton--modifier="pf-m-width-66"}}
         {{/skeleton}}
